# PromoService

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  env.example  pyproject.toml
.github/workflows/: ci.yaml
promo_service/: conftest.py  manage.py
promo_service/goods/: models.py  repository.py  serializer.py  services.py
promo_service/goods/migrations/: 0001_initial.py  0002_good_promo_eligible.py
promo_service/orders/: models.py  repository.py  serializer.py  services.py  urls.py  views.py
promo_service/orders/management/commands/: seed_db.py
promo_service/orders/migrations/: 0001_initial.py
promo_service/orders/tests/: test_create_order.py
promo_service/promo_service/: asgi.py  settings.py  urls.py  wsgi.py
promo_service/promocode/: apps.py  models.py  repository.py  serializers.py  services.py
promo_service/promocode/migrations/: 0001_initial.py
promo_service/promocode/tests/: conftest.py  test_validation.py
promo_service/users/: models.py  repository.py  serializer.py  services.py
promo_service/users/migrations/: 0001_initial.py
